--- a/about.html
+++ b/about.html
@@ -54,7 +54,8 @@
 
     <div class="content-body profilePage">
         <div class="all-content">
-            <div class="wrapcontainer" style="margin-left: 60px;">
+            <div class="wrapcontainer aboutcontainer">
+                <img class="profile-photo profile-photo1" src="assets/AboutPage/mypic.jpg" alt="Profile Photo">
                 <div class="wrap2content-1" style="align-self: flex-end; padding-bottom: 50px">
                     <div class="about-section">
                         <p>
@@ -75,7 +76,7 @@
                     </div>
                 </div>
                 <div class="wrap2content-1">
-                    <img class="profile-photo" src="assets/AboutPage/mypic.jpg" alt="Profile Photo">
+                    <img class="profile-photo profile-photo2" src="assets/AboutPage/mypic.jpg" alt="Profile Photo">
                     <img class="name-logo" src="assets/AboutPage/nameLogo.png" alt="Name Logo">
 
                     <div class="contact-info">
