--- a/featuredProjectPages/proj-etherealAlchemy.html
+++ b/featuredProjectPages/proj-etherealAlchemy.html
@@ -296,26 +296,26 @@
 
     <footer class="footer-gallery">
         <div class="footer-left">
-            <p class="subTitle" style="font-weight: 600;">View Another Project</p>
+            <p class="subTitle viewAnother" style="font-weight: 600;">View Another Project</p>
         </div>
         <div class="footer-right">
             <div class="gallery">
                 <div class="all-content">
                     <div class="gallery-container">
                         <div class="gallery-item">
-                            <a href="../proj-descendantOfTheDesert.html">
+                            <a href="../featuredProjectPages/proj-descendantOfTheDesert.html">
                                 <img src="../assets/Projects-featuredImage/desert.png" alt="Project 2">
                                 <p class="gallery-project-title">Descendant Of The Desert</p>
                             </a>
                         </div>
                         <div class="gallery-item">
-                            <a href="../proj-cityOfBelonging.html">
+                            <a href="../featuredProjectPages/proj-cityOfBelonging.html">
                                 <img src="../assets/Projects-featuredImage/belonging.png" alt="Project 3">
                                 <p class="gallery-project-title">City Of Belonging</p>
                             </a>
                         </div>
                         <div class="gallery-item">
-                            <a href="../proj-theLostLetter.html">
+                            <a href="../featuredProjectPages/proj-theLostLetter.html">
                                 <img src="../assets/Projects-featuredImage/letter.png" alt="Project 4">
                                 <p class="gallery-project-title" style="color: rgba(0, 0, 0, 0.6);"
                                     onmouseover="this.style.color='rgba(0, 0, 0, 0.9)'"
@@ -323,7 +323,7 @@
                             </a>
                         </div>
                         <div class="gallery-item">
-                            <a href="../proj-disconnect.html">
+                            <a href="../featuredProjectPages/proj-disconnect.html">
                                 <img src="../assets/Projects-featuredImage/disconnect.png" alt="Project 5">
                                 <p class="gallery-project-title">Disconnect</p>
                             </a>
@@ -354,7 +354,7 @@
                     style="display: flex; align-items: flex-end; text-decoration: none; color: inherit;">
                     <div class="flexSize icon-container">
                         <div class="icon">
-                            <img src="assets/icons/mail.png" alt="Icon"
+                            <img src="../assets/icons/mail.png" alt="Icon"
                                 style="width:25px; height: auto; padding-right: 10px; transform: translateY(-10%);">
                         </div>
                     </div>
