--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="illustration">
                 <img class="gif" src="assets/indexPage/illustration.gif" alt="daily life of me">
             </div>
-            <p style="text-align:center;">Compassionate Designer and Creative Technologist</p>
+            <p class="hello-discription" style="text-align:center;">Compassionate Designer and Creative Technologist</p>
         </div>
     </div>
     <!-- welcome page ends -->
@@ -74,7 +74,7 @@
     <!-- featured project starts -->
     <div class="content-body">
         <div class="all-content">
-            <p class="subTitle" style="margin-top: 50px; margin-bottom: -70px;">Featured Projects</p>
+            <p class="featuredProjects-Title">Featured Projects</p>
             <div class="featured-projects">
                 <a class="feature-proj-block" href="featuredProjectPages/proj-etherealAlchemy.html">
                     <div class="container-proj1">
@@ -91,6 +91,10 @@
                         </div>
                     </div>
                 </a>
+                <div class="touchScreenDisplay">
+                    <p class="TS-feature-project-title">Ethereal Alchemy</p>
+                </div>
+
                 <!-- ----------------------------------------------- -->
                 <a class="feature-proj-block" href="featuredProjectPages/proj-descendantOfTheDesert.html">
                     <div class="container-proj2">
@@ -104,6 +108,9 @@
                         </div>
                     </div>
                 </a>
+                <div class="touchScreenDisplay">
+                    <p class="TS-feature-project-title">Descendant Of The Desert</p>
+                </div>
                 <!-- ----------------------------------------------- -->
                 <a class="feature-proj-block" href="featuredProjectPages/proj-cityOfBelonging.html">
                     <div class="container-proj3">
@@ -118,6 +125,9 @@
                         </div>
                     </div>
                 </a>
+                <div class="touchScreenDisplay">
+                    <p class="TS-feature-project-title">City Of Belonging</p>
+                </div>
                 <!-- ----------------------------------------------- -->
                 <a class="feature-proj-block" href="featuredProjectPages/proj-theLostLetter.html">
                     <div class="container-proj4">
@@ -133,6 +143,9 @@
                         </div>
                     </div>
                 </a>
+                <div class="touchScreenDisplay">
+                    <p class="TS-feature-project-title">The Lost Letter</p>
+                </div>
                 <!-- ----------------------------------------------- -->
                 <a class="feature-proj-block" href="featuredProjectPages/proj-disconnect.html">
                     <div class="container-proj5">
@@ -147,6 +160,9 @@
                         </div>
                     </div>
                 </a>
+                <div class="touchScreenDisplay">
+                    <p class="TS-feature-project-title">Disconnect</p>
+                </div>
                 <!-- ----------------------------------------------- -->
                 <!-- add a new project: css-styles-indexPage.css - menu part ; js-script.js - Index page - Menu - Project hover animation-->
                 <!-- <a class="feature-proj-block" href="featuredProjectPages/proj-descendantOfTheDesert.html">
@@ -182,6 +198,7 @@
                 <button class="filter-button" data-filter="fine-arts">Fine Arts</button>
                 <button class="filter-button default" data-filter="default">Default</button>
             </div>
+
             <div class="content-body">
                 <div class="all-content">
                     <div class="proj-block" id="proj-block">
