--- a/otherProjectsPages/oProj-woodenMandala.html
+++ b/otherProjectsPages/oProj-woodenMandala.html
@@ -71,7 +71,7 @@
 
     <!-- ========================================================================================== -->
     <div class="content-body">
-        <div class="oProj-content">
+        <div class="all-content">
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
             <div class="align-center">
