--- a/otherProjectsPages/oProj-realMe.html
+++ b/otherProjectsPages/oProj-realMe.html
@@ -68,61 +68,66 @@
 
     <!-- ========================================================================================== -->
     <div class="content-body">
-        <div class="oProj-all-content">
-
+        <div class="all-content">
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
-            <div class="align-center">
-                <div class="oProj-featureImage">
-                    <img src="../assets/otherWorks/realMe/coverImage.png" alt="Feature Image">
-                </div>
-            </div>
-            <div class="align-center">
-                <div class="oProj-headerContent">
-                    <div class="left-column">
-                        <p class="shortDescription">The project focuses on creating a unique jewelry brand that
-                            celebrates individuality and self-expression. The concept is embodied through a series of
-                            specially designed jewelry products and a pop-up store experience that is featured with six
-                            distinctive themes and interactive elements. The pop-up store design is aimed at engaging
-                            users and fostering strong emotional connections between customers and the brand. We hope
-                            this design not only showcases the brand's philosophy but also enhances customer experience
-                            and engagement.</p>
-                    </div>
-                    <div class="right-column">
-                        <p class="tags"><strong>Fall 2021</strong><br>
-                            <br>
-                            <strong>Key Words:</strong><br>
-                            Branding<br>
-                            Pop-up Store Design<br>
-                            Interaction Design<br>
-                            Business and Marketing<br>
-                            <br>
-                            <strong>Group Project</strong><br>
-                            <strong>Role:</strong><br>
-                            Pop-up Store Designer<br>
-                            Interaction Designer<br>
-                        </p>
+            <div class="oProj-content">
+                <div class="align-center">
+                    <div class="oProj-featureImage">
+                        <img src="../assets/otherWorks/realMe/coverImage.png" alt="Feature Image">
                     </div>
                 </div>
-            </div>
-
-            <div class="videoShowcase">
-                <div class="video">
-                    <video controls>
-                        <source src="../assets/otherWorks/realMe/video.mp4" type="video/mp4">
-                    </video>
+                <div class="align-center">
+                    <div class="oProj-headerContent">
+                        <div class="left-column">
+                            <p class="shortDescription">The project focuses on creating a unique jewelry brand that
+                                celebrates individuality and self-expression. The concept is embodied through a series
+                                of
+                                specially designed jewelry products and a pop-up store experience that is featured with
+                                six
+                                distinctive themes and interactive elements. The pop-up store design is aimed at
+                                engaging
+                                users and fostering strong emotional connections between customers and the brand. We
+                                hope
+                                this design not only showcases the brand's philosophy but also enhances customer
+                                experience
+                                and engagement.</p>
+                        </div>
+                        <div class="right-column">
+                            <p class="tags"><strong>Fall 2021</strong><br>
+                                <br>
+                                <strong>Key Words:</strong><br>
+                                Branding<br>
+                                Pop-up Store Design<br>
+                                Interaction Design<br>
+                                Business and Marketing<br>
+                                <br>
+                                <strong>Group Project</strong><br>
+                                <strong>Role:</strong><br>
+                                Pop-up Store Designer<br>
+                                Interaction Designer<br>
+                            </p>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
-            <br><br><br>
-            <div class="align-center">
-                <div class="oProj-pdfEmbed">
-                    <h2 class="oPorj-subTitle">Slide Deck</h2>
-                    <iframe class="pdf-container" src="../assets/otherWorks/realMe/slides.pdf"></iframe>
+                <div class="videoShowcase">
+                    <div class="video">
+                        <video controls>
+                            <source src="../assets/otherWorks/realMe/video.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+
+                <br><br><br>
+                <div class="align-center">
+                    <div class="oProj-pdfEmbed">
+                        <h2 class="oPorj-subTitle">Slide Deck</h2>
+                        <iframe class="pdf-container" src="../assets/otherWorks/realMe/slides.pdf"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
     <div class="gap"></div>
