--- a/featuredProjectPages/proj-cityOfBelonging.html
+++ b/featuredProjectPages/proj-cityOfBelonging.html
@@ -56,6 +56,7 @@
     <div class="content-body">
         <div class="all-content">
             <div class="header">
+                <br><br><br><br>
                 <h1 class="title">City Of Belonging</h1>
                 <div class="headerContent">
                     <div class="left-column">
@@ -106,49 +107,54 @@
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
 
-            <!-- Gallery starts -->
-            <div class="description">
-                <p>
-                    Being an expatriate over the past years, I've connected emotionally with people navigating life away
-                    from home. "City of Belonging" is featured with map-based memory storage, personalized navigation,
-                    social interaction, and cultural exploration recording, enhancing users' interactions with the city.
-                    The highlight is an interactive augmented reality experience, bridging diverse cultures through
-                    historical relics, mythology, and nostalgia, fostering spiritual connections between the user and
-                    the place. Embarking users on enriching journeys, the app fosters a profound sense of belonging
-                    while seamlessly bridging cultures and nurturing a supportive global community for those embarking
-                    on new country experiences. Throughout this process, informed by user research and psychology
-                    studies, I've realized that design entails a nuanced understanding and connection of human nature,
-                    emotions, and culture, seamlessly integrated through technology and aesthetics. This transformative
-                    journey has also enabled me to integrate different cultures within my sense of cultural identity.
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle">Problem</h2>
+                <div class="wrapcontainer">
+                    <div class="wrap2content-1">
+                        <p>Living as an expatriate in the multicultural city of <strong>New York</strong> and in
+                            <strong>Abu Dhabi</strong>, my own living experiences and my interactions with the diverse
+                            community led me to ask：
+                        </p>
+                    </div>
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-belonging/elements/data.png" alt="data" width="150">
+                    </div>
+                </div>
+                <p class="caption" style="margin-top: -10px; margin-left: 20px; margin-right: 20px;">How might we help
+                    <span class="caption-keywords">immigrants</span> better connect with their new urban environments
+                    and build a strong
+                    <span class="caption-keywords">sense of belonging</span> in the city?
                 </p>
             </div>
-            <div class="video">
-                <iframe src="https://www.youtube.com/embed/1BszbTQpkJQ" frameborder="0" allowfullscreen></iframe>
-            </div>
+            <!-- section ends -->
 
-            <div class="wrapcontainer">
-                <div class="wrap2content-1">
-                    <img class="keyImg" src="../assets/proj-belonging/keyImage/key1.png" alt="Image 1">
-                </div>
-                <div class="wrap2content-1">
-                    <img class="keyImg" src="../assets/proj-belonging/keyImage/key2.png" alt="Image 2">
-                </div>
-            </div>
-            <!-- Gallery ends -->
-
-            <!-- --------------------------------------------------------------------------------- -->
-            <!-- --------------------------------------------------------------------------------- -->
 
             <!-- section starts -->
             <div class="subSection">
-                <img class="portfolioImage" src="../assets/proj-belonging/portfolioImage/0.jpg" alt="Image 1">
-                <img class="portfolioImage" src="../assets/proj-belonging/portfolioImage/1.jpg" alt="Image 2">
-                <img class="portfolioImage" src="../assets/proj-belonging/portfolioImage/2.jpg" alt="Image 3">
-                <img class="portfolioImage" src="../assets/proj-belonging/portfolioImage/3.jpg" alt="Image 4">
-                <img class="portfolioImage" src="../assets/proj-belonging/portfolioImage/4.jpg" alt="Image 5">
-                <img class="portfolioImage" src="../assets/proj-belonging/portfolioImage/5.jpg" alt="Image 6">
+                <h2 class="subTitle">Design Solution</h2>
+                <p class="caption" style="margin-left: 20px; margin-right: 20px;">
+                    A mobile application featured with interactive Augmented Reality(AR) experience.
+                </p>
+                <div class="wrapcontainer">
+                    <div class="wrap2content-1">
+                        <img class="keyImg" src="../assets/proj-belonging/keyImage/key1.png" alt="Image 1">
+                    </div>
+                    <div class="wrap2content-1">
+                        <img class="keyImg" src="../assets/proj-belonging/keyImage/key2.png" alt="Image 2">
+                    </div>
+                </div>
+                <img class="keyImg" src="../assets/proj-belonging/elements/solution.png" alt="Image 1"
+                    style="margin-top: -20px; margin-bottom: -50px;">
+                <h2 class="sub-subTitle" style="margin-left: 20px;">AR Feature Demo Video</h2>
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/1BszbTQpkJQ" frameborder="0" allowfullscreen></iframe>
+                </div>
+
+
             </div>
             <!-- section ends -->
+
 
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
@@ -165,7 +171,7 @@
     <!-- ========================================================================================== -->
 
 
-    <footer class="footer-gallery">
+    <footer class=" footer-gallery">
         <div class="footer-left">
             <p class="subTitle" style="font-weight: 600;">View Another Project</p>
         </div>
