--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <button class="filter-button" data-filter="game">Game</button>
                 <button class="filter-button" data-filter="installation">Installation / Immersive Space</button>
                 <button class="filter-button" data-filter="computation">Computation</button>
-                <!-- <button class="filter-button" data-filter="Paper">Papers</button> -->
+                <button class="filter-button" data-filter="writing">Writing</button>
                 <button class="filter-button" data-filter="dance">Dance</button>
                 <button class="filter-button" data-filter="fine-arts">Fine Arts</button>
                 <button class="filter-button default" data-filter="default">Default</button>
