--- a/testHoverVideo.html
+++ b/testHoverVideo.html
@@ -157,7 +157,7 @@
         <button class="filter-button" data-filter="game-dev">Game</button>
         <button class="filter-button" data-filter="installation">Installation / Immersive Space</button>
         <button class="filter-button" data-filter="coding">Computation</button>
-        <!-- <button class="filter-button" data-filter="publishings">Publishings</button> -->
+        <button class="filter-button" data-filter="writing">Writing</button>
         <button class="filter-button" data-filter="dance">Dance</button>
         <button class="filter-button" data-filter="fine-arts">Fine Arts</button>
     </div>
