upgrade - proj1 almost finished

--- a/featuredProjectPages/proj-cityOfBelonging.html
+++ b/featuredProjectPages/proj-cityOfBelonging.html
@@ -156,6 +156,152 @@
             <!-- section ends -->
 
 
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle" style="margin-bottom: -20px;">Literature Review</h2>
+                <div class="wrapcontainer">
+                    <div class="wrap2content-1">
+                        <h2 class="sub-subTitle">Deconstructing “City Perception” into 3 Aspects:<br>
+                            <span class="caption-keywords">
+                                City, People, and Culture
+                            </span>
+                        </h2>
+                        <img src="../assets/proj-belonging/elements/cityPerception.png" alt="data">
+                    </div>
+                    <div class="wrap2content-1">
+                        <h2 class="sub-subTitle">Acculturation complexity model (ACM)</h2>
+                        <br><br>
+                        <img src="../assets/proj-belonging/elements/acmModel.png" alt="data">
+                        <p class="remark" style="font-size:0.08em"> Ettehad, Sheida, et al. “The Role of Culture in
+                            Promoting Architectural
+                            Identity.” European Online Journal of Natural
+                            and Social Sciences: Proceedings, vol. 3, no. 4, 2014.
+                            Décieux, Jean Philippe, and Elke Murdock. “Sense of Belonging: Predictors for Host Country
+                            Attachment among Emigrants.”
+                            IMISCOE Research Series, 2021, pp. 265–285, https://doi.org/10.1007/978-3-030-67498-4_15.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- section ends -->
+
+
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle">Main Insights from Survey and Interviews</h2>
+                <p class="sub-subTitle" style="margin-left: 20px; margin-right: 20px;">
+                    Defining “Sense Of Belonging”
+                </p>
+                <img src="../assets/proj-belonging/elements/belongingDefi.png" alt="definition of belonging"
+                    style="display: block; margin: 0 auto; max-width: 500px; width: 100%;">
+                <h2 class="sub-subTitle" style="margin-left: 20px">Design Logic (scroll to view)</h2>
+            </div>
+            <div class="scroll-container" style="max-height:700px;">
+                <img src="../assets/proj-belonging/elements/designLogic.png" alt="design logic" class="responsive-img"
+                    style="height: 700px;">
+            </div>
+            <!-- section ends -->
+
+
+
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle">Design Solution</h2>
+                <img src="../assets/proj-belonging/elements/design.png" alt="app design"
+                    style="display: block; margin: 0 auto; max-width: 700px; width: 100%;">
+
+
+                <div class="wrapcontainer">
+                    <div class="wrap2content-1">
+                        <h2 class="sub-subTitle">Application Flow: </h2>
+                        <img src="../assets/proj-belonging/elements/appDesign.png" alt="Application Flow Pix"
+                            style="display: block; margin: 10px auto; max-height:80px; width: auto">
+                        <h2 class="sub-subTitle">AR Demo Design Logic: </h2>
+                        <img src="../assets/proj-belonging/elements/demoLogic.png" alt="demo design logic">
+                    </div>
+                    <div class="wrap2content-1">
+                        <h2 class="sub-subTitle">AR Experience Storyboard</h2>
+                        <br><br>
+                        <img src="../assets/proj-belonging/elements/storyboard.png" alt="data" width="150">
+                    </div>
+                </div>
+
+            </div>
+            <!-- section ends -->
+
+
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle">AR Design Demo:</h2>
+                <p class="sub-subTitle" style="margin-left: 20px; margin-right: 20px;">
+                    I designed the AR demo with <strong>NYC</strong> as a demo place and my <strong>Chinese
+                        Identity</strong> as the demo user for the app.<br>The three scenes are designed to connect
+                    the two
+                    culture through city landmark and historical Architecture, mythology, and nastolgical.
+                    transportations
+                </p>
+                <img src="../assets/proj-belonging/elements//ARdesign.jpg" alt="AR design sketch">
+            </div>
+            <!-- section ends -->
+
+
+            <!-- section starts -->
+            <div class="subSection">
+                <h2 class="subTitle" style="margin-bottom: -20px;">Final Outcome</h2>
+                <div>
+                    <h2 class="sub-subTitle">AR Demo <span class="remark"
+                            style="font-family: Noto Serif, serif;font-size: 1em;">（Try it out with
+                            SnapChat and the scenes linked below）</span></h2>
+
+                    <img src="../assets/proj-belonging/elements/ARfinal.png" alt="data">
+                </div>
+
+
+                <h2 class="sub-subTitle">APP Demo</h2>
+                <div class="wrapcontainer">
+                    <div class="wrap2content-1">
+                        <img src="../assets/proj-belonging/elements/icon.png" alt="icon"
+                            style="display: block; margin: 0 auto; max-width:80px">
+                        <h2 class="sub-subTitle" style="text-align: center;">City Of Belonging</h2>
+                        <p style="text-align: center;">“City Of Belonging” is an innovative augmented reality app that
+                            embarks the users on enriching journeys while connecting
+                            them to the city. With a focus on fostering a profound sense of belonging, this app
+                            seamlessly bridges different
+                            cultures and nurtures a supportive global community for individuals venturing into new
+                            country experiences.</p>
+                        <br><br><br>
+                        <div class="wrapcontainer">
+                            <div class="wrap2content-1" style="flex: 1 0 50px;">
+                                <h2 class="sub-subTitle">Color Palette</h2>
+                                <br>
+                                <img src="../assets/proj-belonging/elements/colorPalette.png" alt="data">
+                            </div>
+                            <div class="wrap2content-1" style="flex: 1 0 150px;">
+                                <h2 class="sub-subTitle">UI Aesthetic</h2>
+                                <p>My design concept reflects the journey of exploring an unfamiliar city.<br>
+                                    • Soft, diffused lighting and gradients -> gradually illuminating a place initially
+                                    in darkness<br>
+                                    • Bright accents -> moments of delight and discovery</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="wrap2content-1">
+                        <h2 class="sub-subTitle">Low-fidelity UX Flow Design</h2>
+                        <br><br>
+                        <img src="../assets/proj-belonging/elements/lowFi.png" alt="low fidelity UI design">
+
+                    </div>
+                </div>
+
+                <h2 class="sub-subTitle">Final UI</h2>
+                <br><br>
+                <img src="../assets/proj-belonging/elements/FinalUI.png" alt="Final UI">
+
+            </div>
+
+            <!-- section ends -->
+
             <!-- --------------------------------------------------------------------------------- -->
             <!-- --------------------------------------------------------------------------------- -->
 
