--- a/test.html
+++ b/test.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         .scroll-container {
-            width: 100%; /* 设置容器宽度为100% */
-            overflow-x: auto; /* 启用水平滚动 */
+            width: 100%;
+            overflow-x: auto;
             height: 200px;
-            white-space: nowrap; /* 禁用文本换行，使内容在同一行 */
+            white-space: nowrap;
         }
+
         .scroll-container img {
-            display: inline-block; /* 将图片设为inline-block，防止被压缩 */
+            display: inline-block;
         }
     </style>
     <title>水平滑动的长图</title>
 </head>
+
 <body>
     <div class="scroll-container">
         <img src="test.png" alt="长图" width="2000">
     </div>
 </body>
+
 </html>
